# Lightning

./: .gitattributes  .gitignore  CMakeLists.txt  Engine.cpp  Engine.h  Entry.cpp  README.md  config.xml  entry.cpp  tags.temp
AssetPipeline/: AssetPipeline.cpp  CMakeLists.txt
Foundation/: CMakeLists.txt  Common.cpp  Common.h  ConfigManager.cpp  ConfigManager.h  Container.h  Counter.h  EnumOperation.h  Environment.cpp  Environment.h  FileSystem.cpp  FileSystem.h  FileSystemFactory.cpp  FileSystemFactory.h  FoundationPlugin.cpp  FoundationPlugin.h  FoundationPluginImpl.cpp  HashableObject.h  IConfigManager.h  IEnvironment.h  IFileSystem.h  IFoundationPlugin.h  Logger.h  MurmurHash3.h  PlainObject.h  RefObjectCache.h  ThreadLocalObject.h  TimeSystem.cpp  TimeSystem.h  Timer.cpp  Timer.h  TimerManager.cpp  TimerManager.h  common.cpp  configmanager.cpp  filesystem.cpp  filesystemfactory.cpp  singleton.h  systempriority.h  timermanager.h  (+2 more)
JobSystem/: CMakeLists.txt  ConcurrentQueue.h  JobAllocator.h  JobManager.h  JobQueue.h
Loader/: CMakeLists.txt  ILoader.h  ILoaderPlugin.h  ISerializeBuffer.h  ISerializer.h  Iserializer.h  Loader.cpp  Loader.h  LoaderExportDef.h  LoaderPlugin.cpp  LoaderPlugin.h  LoaderPluginImpl.cpp  SerializeBuffer.cpp  SerializeBuffer.h
Platform/: CMakeLists.txt  IPlatformPlugin.h  PlatformExportDef.h  PlatformPlugin.cpp  PlatformPlugin.h  PlatformPluginImpl.cpp
Render/: CMakeLists.txt  CommitedDrawCall.cpp  CommitedDrawCall.h  CommittedDrawCall.cpp  CommittedDrawCall.h  CommittedDrawCommand.cpp  CommittedDrawCommand.h  DeferedRenderPass.cpp  DeferedRenderPass.h  DepthStencilState.cpp  Device.cpp  Device.h  DrawCall.cpp  DrawCall.h  DrawCommand.cpp  DrawCommand.h  ForwardRenderPass.cpp  ForwardRenderPass.h  FrameMemoryAllocator.cpp  FrameMemoryAllocator.h  GPUBuffer.cpp  GPUBuffer.h  Geometry.cpp  Geometry.h  ICamera.h  IDepthStencilBuffer.h  IDevice.h  IDrawCall.h  IDrawCommand.h  IDrawable.h  IGPUBuffer.h  IIndexBuffer.h  IMaterial.h  IRenderFence.h  IRenderPlugin.h  IRenderTarget.h  IRenderTargetManager.h  IRenderUnit.h  IRenderer.h  ISpaceObject.h  (+34 more)
ResourceGenerator/: CMakeLists.txt  ResourceGenerator.cpp
Scene/: CMakeLists.txt  Camera.cpp  Camera.h  Drawable.h  ICamera.h  IDrawable.h  IPrimitive.h  IScene.h  ISceneManager.h  IScenePlugin.h  Primitive.cpp  Primitive.h  Scene.cpp  Scene.h  SceneExportDef.h  SceneManager.cpp  SceneManager.h  ScenePlugin.cpp  ScenePlugin.h  ScenePluginImpl.cpp  SceneRenderData.h
UnitTest/: CMakeLists.txt  ECSTest.cpp  HelperStubTest.cpp  MathTest.cpp  MemoryTest.cpp
Window/: CMakeLists.txt  GameWindow.cpp  GameWindow.h  IWindow.h  IWindowPlugin.h  WinWindowSystem.cpp  WinWindowSystem.h  WindowComponent.h  WindowEvents.h  WindowPlugin.cpp  WindowPlugin.h  WindowPluginImpl.cpp  WindowSystem.cpp  WindowSystem.h  WindowsGameWindow.cpp  WindowsGameWindow.h
foundation/: CMakeLists.txt  common.cpp  common.h  configmanager.cpp  configmanager.h  container.h  counter.h  enumoperation.h  environment.cpp  environment.h  filesystem.cpp  filesystem.h  filesystemfactory.cpp  filesystemfactory.h  foundationexportdef.h  logger.cpp  logger.h  murmurhash3.h  plainobject.h  singleton.h  systempriority.h  threadlocalsingleton.h  timer.cpp  timer.h  timermanager.cpp  timermanager.h  timesystem.cpp  timesystem.h
jobsystem/: CMakeLists.txt  job.h  joballocator.h  jobinterface.h  jobmanager.h  jobqueue.cpp  jobqueue.h  jobsystem.h  main.cpp  workstealqueue.cpp  workstealqueue.h
loader/: CMakeLists.txt  baseloader.cpp  baseloader.h  ideserializer.h  iloader.h  iserializer.h  loader.cpp  loader.h  loadermgr.cpp  loadermgr.h  shaderdeserializer.cpp  shaderdeserializer.h  shaderloader.cpp  shaderloader.h  texturedeserializer.cpp  texturedeserializer.h  textureloader.cpp  textureloader.h
platform/: CMakeLists.txt  iwindow.h  platformexportdef.h  windowmanager.cpp  windowmanager.h  winwindow.cpp  winwindow.h
render/: CMakeLists.txt  bindablebuffer.cpp  bindablebuffer.h  blendstate.cpp  deferedrenderpass.cpp  deferedrenderpass.h  depthstencilstate.cpp  device.cpp  device.h  forwardrenderpass.cpp  forwardrenderpass.h  geometry.cpp  geometry.h  gpubuffer.cpp  gpubuffer.h  idepthstencilbuffer.h  idevice.h  igpubuffer.h  iindexbuffer.h  indexbuffer.cpp  indexbuffer.h  irenderer.h  irenderfence.h  irendertarget.h  irendertargetmanager.h  iswapchain.h  ivertexbuffer.h  material.cpp  material.h  pipelinestate.h  renderallocator.h  renderconstants.cpp  renderconstants.h  renderer.cpp  renderer.h  rendererexportdef.h  rendererfactory.cpp  rendererfactory.h  rendererhelper.cpp  rendererhelper.h  (+12 more)
renderer/: CMakeLists.txt  blendstate.cpp  depthstencilstate.cpp  device.cpp  device.h  iblendstate.h  idepthstencilstate.h  idevice.h  ipipelinestateobject.h  irasterizerstate.h  irendercontext.h  irenderer.h  irenderresourcekeeper.h  irenderresourceuser.h  irendertarget.h  irendertargetmanager.h  iswapchain.h  ivertexbuffer.h  pipelinestateobject.cpp  rasterizerstate.cpp  renderconstants.cpp  renderconstants.h  renderer.cpp  renderer.h  rendererexportdef.h  rendererfactory.cpp  rendererfactory.h  rendererhelper.cpp  rendererhelper.h  renderexception.h  renderstates.h  rendertargetmanager.cpp  semantics.h  vertexbuffer.cpp  vertexbuffer.h
scene/: CMakeLists.txt  camera.cpp  camera.h  drawable.h  primitive.cpp  primitive.h  scene.cpp  scene.h  sceneexportdef.h  scenemanager.cpp  scenemanager.h  scenerenderdata.cpp  scenerenderdata.h
serialization/: CMakeLists.txt  asyncloader.cpp  asyncloader.h  serializationexportdef.h
unittest/: CMakeLists.txt  ecstest.cpp  helperstubtest.cpp  mathtest.cpp  memorytest.cpp
utilities/: CMakeLists.txt  enginealgo.cpp  enginealgo.h  hashableobject.h  helperstubs.h  utilitiesexportdef.h
window/: CMakeLists.txt  iwindow.h  iwindownativehandle.h  window.cpp  window.h  windowcomponent.h  windowevents.h  windowexportdef.h  windowmanager.cpp  windowmanager.h  windowmessage.h  windowsystem.cpp  windowsystem.h  winwindow.cpp  winwindow.h  winwindowcomponent.h  winwindownativehandle.cpp  winwindownativehandle.h  (+2 more)
(+387 files in other folders)
