project(Platform)
message(STATUS "Configuring project platform")

set(APPLICATION_SUBSYSTEM_DIR "Application")

set(HEADERS	PlatformExportDef.h)

set(APPLICATION_HEADERS		${APPLICATION_SUBSYSTEM_DIR}/AppSystem.h
							${APPLICATION_SUBSYSTEM_DIR}/AppComponent.h)
set(APPLICATION_SOURCES		${APPLICATION_SUBSYSTEM_DIR}/AppSystem.cpp)


if(WIN32)
	list(APPEND APPLICATION_HEADERS ${APPLICATION_SUBSYSTEM_DIR}/Win32AppSystem.h)
	list(APPEND APPLICATION_SOURCES ${APPLICATION_SUBSYSTEM_DIR}/Win32AppSystem.cpp)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(WIN32)
	add_definitions(-DLIGHTNING_WIN32)
endif()
if(LIGHTNING_USE_D3D12)
	add_definitions(-DLIGHTNING_USE_D3D12)
	include_directories(${CMAKE_SOURCE_DIR}/Render/D3D12)
endif()

source_group("Application" FILES 
			${APPLICATION_HEADERS}
			${APPLICATION_SOURCES})

list(APPEND HEADERS ${APPLICATION_HEADERS})
list(APPEND SOURCES ${APPLICATION_SOURCES})

define_dll_export_macro(PLATFORM)

set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS})

include_directories(${CMAKE_CURRENT_SOURCE_DIR} 
					${CMAKE_SOURCE_DIR}/Foundation
					${CMAKE_SOURCE_DIR}/Foundation/Memory
					${CMAKE_SOURCE_DIR}/Foundation/Math
					${CMAKE_SOURCE_DIR}/Render
					${CMAKE_SOURCE_DIR}/Render/Types
					${CMAKE_SOURCE_DIR}/Render/Shader
					${CMAKE_SOURCE_DIR}/Window
					${CMAKE_SOURCE_DIR}/Utilities
					${CMAKE_SOURCE_DIR}/Scene
					${CMAKE_SOURCE_DIR}/Loader
					${CMAKE_SOURCE_DIR}/Entities
					${Boost_INCLUDE_DIR}
					${TBB_INCLUDE_DIR}
					${RTTR_INCLUDE_DIR}
					${SPDLOG_INCLUDE_DIR})


add_library(${PROJECT_NAME} SHARED ${HEADERS} ${SOURCES})
add_dependencies(${PROJECT_NAME} Foundation Window Render Scene Loader)

if(MSVC)
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Od /Zi /wd4251 /wd4275 /EHsc /MDd")
	set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_DEBUG} /wd4251 /wd4275 /EHsc /MD")
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DNDEBUG /wd4251 /wd4275 /EHsc")
	set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_RELEASE} /DNDEBUG /wd4251 /wd4275 /EHsc")
	set_property(TARGET ${PROJECT_NAME} APPEND PROPERTY LINK_FLAGS_DEBUG /DEBUG)
endif()
target_link_libraries(${PROJECT_NAME} Foundation Window Render Scene Loader)

