project(Platform)
message(STATUS "Configuring project Platform")

set(APPLICATION_SUBSYSTEM_DIR "Application")
set(EVENT_DIR ${CMAKE_SOURCE_DIR}/Foundation/ECS)

set(PLUGIN_HEADERS	IPlatformPlugin.h)
set(PLUGIN_SOURCES	PlatformPluginImpl.cpp)
set(INTERFACE_HEADERS ${APPLICATION_SUBSYSTEM_DIR}/IApplication.h)

set(APPLICATION_HEADERS		${APPLICATION_SUBSYSTEM_DIR}/Application.h
							${APPLICATION_SUBSYSTEM_DIR}/ApplicationFactory.h)
set(APPLICATION_SOURCES		${APPLICATION_SUBSYSTEM_DIR}/Application.cpp
							${APPLICATION_SUBSYSTEM_DIR}/ApplicationFactory.cpp)

set(EVENT_HEADERS			${EVENT_DIR}/EventManager.h)			
set(EVENT_SOURCES			${EVENT_DIR}/EventManager.cpp)


if(WIN32)
	list(APPEND APPLICATION_HEADERS ${APPLICATION_SUBSYSTEM_DIR}/WindowsApplication.h)
	list(APPEND APPLICATION_SOURCES ${APPLICATION_SUBSYSTEM_DIR}/WindowsApplication.cpp)
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(WIN32)
	add_definitions(-DLIGHTNING_WIN32)
endif()
if(LIGHTNING_USE_D3D12)
	add_definitions(-DLIGHTNING_USE_D3D12)
	include_directories(${CMAKE_SOURCE_DIR}/Render/D3D12)
endif()

source_group("Interfaces" FILES ${INTERFACE_HEADERS})
source_group("Application" FILES 
			${APPLICATION_HEADERS}
			${APPLICATION_SOURCES})

source_group("Plugin" FILES
			${PLUGIN_HEADERS}
			${PLUGIN_SOURCES})

source_group("Events" FILES
			${EVENT_HEADERS}
			${EVENT_SOURCES})

list(APPEND HEADERS ${INTERFACE_HEADERS} ${APPLICATION_HEADERS} ${PLUGIN_HEADERS} ${EVENT_HEADERS})
list(APPEND SOURCES ${APPLICATION_SOURCES} ${PLUGIN_SOURCES} ${EVENT_SOURCES})

define_dll_export_macro(PLATFORM)

set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${PLATFORM_LINKER_FLAGS})

include_directories( ${CMAKE_CURRENT_SOURCE_DIR} 
					${CMAKE_SOURCE_DIR}/PluginSystem
					${CMAKE_SOURCE_DIR}/Foundation
					${CMAKE_SOURCE_DIR}/Foundation/Memory
					${CMAKE_SOURCE_DIR}/Foundation/Math
					${CMAKE_SOURCE_DIR}/Render
					${CMAKE_SOURCE_DIR}/Render/Types
					${CMAKE_SOURCE_DIR}/Render/Shader
					${CMAKE_SOURCE_DIR}/Render/Texture
					${CMAKE_SOURCE_DIR}/Window
					${CMAKE_SOURCE_DIR}/Utilities
					${CMAKE_SOURCE_DIR}/World
					${CMAKE_SOURCE_DIR}/Loader
					${CMAKE_SOURCE_DIR}/Entities
					${Boost_INCLUDE_DIR}
					${TBB_INCLUDE_DIR}
					${RTTR_INCLUDE_DIR}
					${SPDLOG_INCLUDE_DIR})


add_library(${PROJECT_NAME} SHARED ${HEADERS} ${SOURCES})
add_dependencies(${PROJECT_NAME} Foundation Window Render World Loader)
target_link_libraries(${PROJECT_NAME} ${TBB_LIBRARIES})
if(MSVC)
	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /Od /Zi /wd4251 /wd4275 /EHsc /MDd /MP")
	set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_DEBUG} /wd4251 /wd4275 /EHsc /MD /MP")
	set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /DNDEBUG /wd4251 /wd4275 /EHsc /MP")
	set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_RELEASE} /DNDEBUG /wd4251 /wd4275 /EHsc /MP")
	set_property(TARGET ${PROJECT_NAME} APPEND PROPERTY LINK_FLAGS_DEBUG /DEBUG)
endif()

